Recipes basic components

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>CookBook</title>
     <link rel="stylesheet" href="./css/main.css">
     <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
 <body>
     <div id="app"></div>
